; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_pxamci.c_pxamci_finish_request.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_pxamci.c_pxamci_finish_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pxamci_host = type { i32, i32*, i32*, i32* }
%struct.mmc_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pxamci_host*, %struct.mmc_request*)* @pxamci_finish_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pxamci_finish_request(%struct.pxamci_host* %0, %struct.mmc_request* %1) #0 {
  %3 = alloca %struct.pxamci_host*, align 8
  %4 = alloca %struct.mmc_request*, align 8
  store %struct.pxamci_host* %0, %struct.pxamci_host** %3, align 8
  store %struct.mmc_request* %1, %struct.mmc_request** %4, align 8
  %5 = load %struct.pxamci_host*, %struct.pxamci_host** %3, align 8
  %6 = getelementptr inbounds %struct.pxamci_host, %struct.pxamci_host* %5, i32 0, i32 3
  store i32* null, i32** %6, align 8
  %7 = load %struct.pxamci_host*, %struct.pxamci_host** %3, align 8
  %8 = getelementptr inbounds %struct.pxamci_host, %struct.pxamci_host* %7, i32 0, i32 2
  store i32* null, i32** %8, align 8
  %9 = load %struct.pxamci_host*, %struct.pxamci_host** %3, align 8
  %10 = getelementptr inbounds %struct.pxamci_host, %struct.pxamci_host* %9, i32 0, i32 1
  store i32* null, i32** %10, align 8
  %11 = load %struct.pxamci_host*, %struct.pxamci_host** %3, align 8
  %12 = getelementptr inbounds %struct.pxamci_host, %struct.pxamci_host* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.mmc_request*, %struct.mmc_request** %4, align 8
  %15 = call i32 @mmc_request_done(i32 %13, %struct.mmc_request* %14)
  ret void
}

declare dso_local i32 @mmc_request_done(i32, %struct.mmc_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
